--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap" rel="stylesheet">
   <title>Lessons Learned</title>
 </head>
 
 <body>
   <header id="cabecalho">
-    <p>
-      <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
-        <img src="https://achecker.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102" />
-      </a>
-    </p>
 
     <h1 id="titulo">Lessons Learned</h1>
 
@@ -25,13 +22,18 @@
         <li><a href=""></a>Fotografia</li>
       </ul>
     </nav>
-
   </header>
 
-  <!--<img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">-->
+  <div class="box">
+    <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
+    <p>Oi, eu sou Felipe!</p>
+    <p>Bem vindo!</p>
+  </div>
 
-  <section>
+  <section id="secao-skills">
+
     <nav class="skills">
+      <h3>Lições aprendidas</h3>
       <ol id="licoes_aprendidas">
         <li>Terminal Shell</li>
         <li>Git</li>
@@ -46,6 +48,7 @@
       </ol>
     </nav>
     <nav class="skills">
+      <h3>Lições a aprender</h3>
       <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>UI & UX</li>
@@ -59,45 +62,38 @@
         <li>Back-end</li>
       </ul>
     </nav>
-  </section>
+    <section class="article">
+      <article>
+        <h2>Sobre meu aprendizado</h2>
+        <p>
+          <strong>Nada facil!</strong>
+          Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha
+          semanas atrás e comparo com hoje, é grande a diferença. <br> Depois de passar por vários sufocos como reinstalar
+          versões do Linux que sempre “bugavam”, ter que usá-lo sem interface foi desafiador, mas consegui. Talvez se
+          não
+          fosse para estar na Trybe nem teria tentado. <br> Um dos principais motivos que me fez estar aqui é me tirar da
+          zona
+          de conforto, sendo assim, vamos nessa!
+        </p>
+      </article>
+    </section>
 
-  <section>
-    <article>
-      <h2>Sobre seu aprendizado</h2>
-      <p>
-        <strong>Nada facil!</strong>
-        Na verdade meu aprendizado tem sido muito bom e satisfatório. Quando penso o nível de conhecimento que tinha
-        semanas atrás e comparo com hoje, é grande a diferença. Depois de passar por vários sufocos como reinstalar
-        versões do Linux que sempre “bugavam”, ter que usá-lo sem interface foi desafiador, mas consegui. Talvez se não
-        fosse para estar na Trybe nem teria tentado. Um dos principais motivos que me fez estar aqui é me tirar da zona
-        de conforto, sendo assim, vamos nessa!
-      </p>
-    </article>
+    <section class="article">
+      <aside>
+        <h2>Uma passagem do meu aprendizado</h2>
+        <p>
+          Uma passagem tensa e ao mesmo tempo engraçada foi quando não conseguia entender como funcionava o Git e
+          GitHub.
+          Foi um desespero tão grande que não dormir por 2 noites até aprender como funcionava esse negócio sô!
+        </p>
+      </aside>
+    </section>
   </section>
+  <section>
 
-  <section>
-    <aside>
-      <h3>Uma passagem do meu aprendizado</h3>
-      <p>
-        Uma passagem tensa e ao mesmo tempo engraçada foi quando não conseguia entender como funcionava o Git e GitHub.
-        Foi um desespero tão grande que não dormir por 2 noites até aprender como funcionava esse negócio sô!
-      </p>
-    </aside>
-  </section>
-  <section>
-    <table>
-      <th>
-        <tr>Tabela</tr>
-      </th>
-      <th>
-      <td>A completar</td>
-      </th>
-    </table>
-  </section>
-
-  <footer id="rodape">
-    Compilado por: <a target="_blank" href="https://www.linkedin.com/in/devsfelipesantiago/">Felipe Santiago</a>
-  </footer>
+    <footer id="rodape">
+      Compilado por: <a target="_blank" href="https://www.linkedin.com/in/devsfelipesantiago/">Felipe Santiago</a>
+    </footer>
 </body>
 
 </html>
