Último commit de terça(1)

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progeto 1</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="3972trybe.ico" type="image/x-icon">
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Lições aprendidas na Trybe</h1>
+        <h1>
+            Lições aprendidas na Trybe
+        </h1>
     </header>
     <main>
         <img id="minha_foto" src="perfilWhatsapp.jpeg" alt="menino sorrindo">
         <nav id="navegatio">
             <ol type="1" class="list" id="licoes_aprendidas">
-                <h3>Lista de coisas aprendidas</h3>
+                <h2>Lista de coisas aprendidas</h2>
                 <li>Git</li>
                 <li>GitHub</li>
                 <li>Unix</li>
@@ -27,7 +30,7 @@
                 <li>Forms</li>
             </ol>
             <ul type="1" class="list" id="licoes_a_aprender">
-                <h3>Lista de coisas para aprender</h3>
+                <h2>Lista de coisas para aprender</h2>
                 <li>JavaScript</li>
                 <li>React</li>
                 <li>Node.js</li>
