Add tabela estilizada

--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
                     </ul>
                 </section>
             </div>
+
+            <table>
+                <h2>Onde me encontrar</h2>
+                <tr>
+                    <th>País</th>
+                    <th>Estado</th>
+                    <th>Cidade</th>
+                </tr>
+                <tr>
+                    <td>Brasil</td>
+                    <td>Minas Gerais</td>
+                    <td>Divinópolis</td>
+                </tr>
+            </table>
         </main>
 
         <footer id="rodape">
