--- a/index.html
+++ b/index.html
@@ -12,33 +12,42 @@
   </header>
   <main>
     <img id="minha_foto" src="./img/Cris1.jpeg" alt="">
-    <ol id="licoes_aprendidas">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <nav>
+        <ul>
+          <li><a href="https://www.facebook.com/cristiano.lopes.315" target="_blank"><img id="img_face" src="./img/facebook.jpg" alt="FaceBook"></a></li>
+          <li><a href=""><img id="img_linkedin" src="./img/linkedin" alt="linkedin"></a></li>
+          <li><a href=""><img id="img_github" src="./img/github.jpeg" alt="github"></a></li>
+        </ul>
+    </nav>
+    <div id="lista_conhecimento">
+      <ol id="licoes_aprendidas">
+        <li>Softskills</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Instalação e configuração de Linux</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semântico</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Lógica de Programação e Algoritmos</li>
+        <li>Objetos e funções</li>
+        <li>DOM</li>
+        <li>Web Storage</li>
+        <li>Testes automatizados com Jest</li>
+        <li>React</li>
+        <li>Metodologias Ágeis</li>
+        <li>Testes automatizados com React</li>
+        <li>Gerenciamento de estado com Redux</li>
+      </ul>
+  </div>
   </main>
   <footer id="rodape">
-    <h4>Cristiano L Duarte</h4>
+    <h6>Cristiano L Duarte</h6>
   </footer>
 </body>   
 </html>
