a little style.css

--- a/index.html
+++ b/index.html
@@ -14,58 +14,62 @@
                     <li><a href="#article">Artigo</a></li>
                     <li><a href="#rodape">Rodapé</a></li>
                 </ul>
-            </nav>
+            </nav>            
         </header>
-        <img id="minha_foto" src="giovani.jpeg" alt="imagem_autor">
-        <section id="lists">
+        <img id="minha_foto" src="giovani2.png" alt="imagem_autor">
+        <section class="clear" id="lists">
             <div id="lista-aprendidas">
                 <h2>Lições aprendidas</h2>
-                    <ol id="licoes_aprendidas">
-                        <li>HTML;</li>
-                        <li>CSS;</li>
-                        <li>SEO;</li>
-                        <li>Acessibilidade;</li>
-                        <li>HTML SEMÂNTICO;</li>
-                        <li>GIT;</li>
-                        <li>INTERNET;</li>
-                        <li>SOFT SKILLS;</li>
-                        <li>GITHUB;</li>
-                        <li>Pesquisar como um dev;</li>
-                    </ol>
+                <ol id="licoes_aprendidas">
+                    <li>HTML;</li>
+                    <li>CSS;</li>
+                    <li>SEO;</li>
+                    <li>Acessibilidade;</li>
+                    <li>HTML Semântico;</li>
+                    <li>Git;</li>
+                    <li>Internet;</li> 
+                    <li>Soft Skills;</li>
+                    <li>Github;</li>
+                    <li>Pesquisar como um dev;</li>
+                </ol>
             </div>
             <div id="lista-a-aprender">
-                <h2>Lições aprendidas</h2>
-                    <ul id="licoes_a_aprender">
-                        <li>JavaScript;</li>
-                        <li>React;</li>
-                        <li>NodeJS;</li>
-                        <li>Python;</li>
-                        <li>Estrutura de dados;</li>
-                        <li>Algorítimos;</li>
-                        <li>Testes Unitários;</li>
-                        <li>Programação orientada a objetos;</li>
-                        <li>Arquitetura de Computadores e Redes;</li>
-                        <li>Banco de dados;</li>
-                    </ul>
+                <h2>Lições a aprender</h2>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript;</li>
+                    <li>React;</li>
+                    <li>NodeJS;</li>
+                    <li>Python;</li>
+                    <li>Estrutura de dados;</li>
+                    <li>Algorítimos;</li>
+                    <li>Testes Unitários;</li>
+                    <li>Programação orientada a objetos;</li>
+                    <li>Arquitetura de Computadores e Redes;</li>
+                    <li>Banco de dados;</li>
+                </ul>
             </div>
-        </section>
+        </section>       
         <div class="clear"></div>
         <table>
             
         </table>
-        <article id="article" class="lado-esquerdo">
-            <p>
-                Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus.
-            </p>            
-        </article>
-        <section>            
-            <aside class="lado-direito">
+        <div class="container-infromation">
+            <article id="article" class="lado-esquerdo">
+                <h3>Lorem ipsum</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac arcu molestie neque auctor rutrum cursus in lorem. Ut eget dignissim magna. Aenean eget dictum odio, sed porttitor magna. Nunc maximus vitae est bibendum tempor.
-                </p>
-            </aside>
-            <div class="clear"></div>
-        </section>
+                    Ut odio elit, mollis a consectetur in, vehicula eu magna. Duis convallis velit ut leo convallis convallis. Nunc finibus, nulla at vehicula lacinia, lorem justo varius justo, sit amet rutrum tellus lacus nec felis. Proin luctus odio quam, eget vestibulum dolor pretium vitae. Etiam vulputate, dui eget hendrerit placerat, nulla massa vulputate eros, quis hendrerit ex justo eu lectus.
+                </p>            
+            </article>
+            <section>            
+                <aside class="lado-direito">
+                    <h3>Lorem ipsum</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac arcu molestie neque auctor rutrum cursus in lorem. Ut eget dignissim magna. Aenean eget dictum odio, sed porttitor magna. Nunc maximus vitae est bibendum tempor.
+                    </p>
+                </aside>
+                <div class="clear"></div>
+            </section>
+        </div>
         <a href="https://www.linkedin.com/in/giovani-diccini/" target="_blank">Linkedin</a>
         <footer id="rodape">
             <p>
