--- a/index.html
+++ b/index.html
@@ -66,10 +66,35 @@
       </section>
       <section class="aside__general">
         <aside class="aside">
-          <h3></h3>
+          <h3> Uma  rápida passagem...</h3>
           <p>Você já parou pra pensar o que uma escola pode oferecer para seus alunos? Já pensou na experiencia que essa escola pode proporcionar? Ou Você acha que a escola tem que ensinar e ponto final?
             São muitas respostas, e tenho certeza que cada um de nós tem uma resposta pra cada uma dessas perguntas. E hoje, depois de terminar o Primeiro Projeto da Trybe, minha resposta mudou, minha visão mudou, minha experiencia mudou, e eu só tenho a agradecer por isso!</p>
         </aside>
+      </section>
+      <section>
+        <h3>Genios Inventores</h3>
+        <table>
+          <tr>
+            <th>Nome</th>
+            <th>Sobrenome</th> 
+            <th>Tecnologia</th>
+          </tr>
+          <tr>
+            <td>Linus</td>
+            <td>Torvalds</td>
+            <td>Linux & Git</td>
+          </tr>
+          <tr>
+            <td>Tim </td>
+            <td>Berners-Lee</td>
+            <td>HTML</td>
+          </tr>
+          <tr>
+            <td>Brendan</td>
+            <td> Eich</td>
+            <td>JavaScript</td>
+          </tr>
+        </table>
       </section>
     </main>
     <footer id="rodape">
