--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
       <nav>
         <ul>
-           <li><a href="#">Home</a></li>
-           <li><a href="#licoes_aprendidas">Lições</a></li>
-           <li><a href="#rodape">Contato</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#licoes_aprendidas">Lições</a></li>
+          <li><a href="#rodape">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -60,15 +60,29 @@
         </ul>
       </section>
       <section class="articles">
-        <article class="article"><a href="https://www.betrybe.com/" target="_blank"><h3>Trybe</h3></a>
-        <p>O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so vivendo pra saber! Desculpa por isso, não dá para resumir o tanto que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento, Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É demais!!!</p>
+        <article class="article">
+          <a href="https://www.betrybe.com/" target="_blank"><h3>Trybe</h3></a>
+          <p>
+            O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so
+            vivendo pra saber! Desculpa por isso, não dá para resumir o tanto
+            que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento,
+            Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É
+            demais!!! E hoje, depois de terminar o Primeiro
+            Projeto da Trybe, minhas perguntas mudaram, minha visão mudou, minha
+            experiencia mudou, e eu só tenho a agradecer por isso!
+          </p>
         </article>
       </section>
       <section class="aside__general">
         <aside class="aside">
-          <h3> Uma  rápida passagem...</h3>
-          <p>Você já parou pra pensar o que uma escola pode oferecer para seus alunos? Já pensou na experiencia que essa escola pode proporcionar? Ou Você acha que a escola tem que ensinar e ponto final?
-            São muitas respostas, e tenho certeza que cada um de nós tem uma resposta pra cada uma dessas perguntas. E hoje, depois de terminar o Primeiro Projeto da Trybe, minha resposta mudou, minha visão mudou, minha experiencia mudou, e eu só tenho a agradecer por isso!</p>
+          <h4>Uma rápida passagem...</h4>
+          <p>
+            Você já parou pra pensar o que uma escola pode oferecer para seus
+            alunos? Já pensou na experiencia que essa escola pode proporcionar?
+            Ou Você acha que a escola tem que ensinar e ponto final? São muitas
+            respostas, e tenho certeza que cada um de nós tem uma resposta pra
+            cada uma dessas perguntas. 
+          </p>
         </aside>
       </section>
       <section>
@@ -85,13 +99,13 @@
             <td>Linux & Git</td>
           </tr>
           <tr>
-            <td>Tim </td>
+            <td>Tim</td>
             <td>Berners-Lee</td>
             <td>HTML</td>
           </tr>
           <tr>
             <td>Brendan</td>
-            <td> Eich</td>
+            <td>Eich</td>
             <td>JavaScript</td>
           </tr>
         </table>
