requisitos 9 e 10 passagem de aprendizado e elementos html para buscas html

--- a/index.html
+++ b/index.html
@@ -8,39 +8,45 @@
 </head>
 <body>
   <header id="cabecalho">
+    <nav>
       <h1 id="titulo">Perycles F.</h1>
+    </nav>
   </header>
   <section>
     <img id="minha_foto" src="./img1.jpg" alt="">
   </section>
   <main id="content">
     <section>
-      <h3>Licoes aprendidas:</h3>
-      <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Html</li>
-        <li>Css</li>
-        <li>Internet</li>
-        <li>Semantica Html</li>
-        <li>Boas praticas</li>
-        <li>Soft Skill</li>
-      </ol>
-      <h3>Licoes a aprender:</h3>
-      <ul id="licoes_a_aprender">
-        <li>JavaScrit</li>
-        <li>FlexBoxCss</li>
-        <li>React</li>
-        <li>RTL</li>
-        <li>Metodologias Ageis</li>
-        <li>MongoDB</li>
-        <li>NodeJs</li>
-        <li>Arquiterura de Software</li>
-        <li>Python</li>
-        <li>Estrutura de Dados</li>
-      </ul>
+      <div>
+        <h3>Licoes aprendidas:</h3>
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Html</li>
+          <li>Css</li>
+          <li>Internet</li>
+          <li>Semantica Html</li>
+          <li>Boas praticas</li>
+          <li>Soft Skill</li>
+        </ol>
+      </div>
+      <div>
+        <h3>Licoes a aprender:</h3>
+        <ul id="licoes_a_aprender">
+          <li>JavaScrit</li>
+          <li>FlexBoxCss</li>
+          <li>React</li>
+          <li>RTL</li>
+          <li>Metodologias Ageis</li>
+          <li>MongoDB</li>
+          <li>NodeJs</li>
+          <li>Arquiterura de Software</li>
+          <li>Python</li>
+          <li>Estrutura de Dados</li>
+        </ul>
+      </div>
       <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank">Linkedin</a>
     </section>
     <section>
@@ -48,6 +54,9 @@
         <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
       </article>
     </section>
+    <aside id="aside">
+      <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
+    </aside>
   </main>
   <footer id="rodape">
     <p><strong>Development by for Perycles R. Floriano.</strong> </p>
