--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
             <header id="cabecalho">
                 <h1 id="titulo">Lições Aprendidas</h1>
             </header>
+            <nav id="navegacao">
+                <ul>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Lista</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
             <img id="minha_foto"src="MinhaFoto.jpg" alt="uma foto do meu rosto">
+            <h2>Lista de lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Bash</li>
@@ -46,7 +54,7 @@
                 <p>
                     Informacoes para contato:<br>
                     <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="uma logo do site linkedin"></a>
-                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="768px-Instagram_logo_2016.svg.webp" alt="Uma logo do site instagram que direciona para meu perfil da rede social"></a>
+                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="768px-Instagram_logo_2016.svg.webp" alt="Uma logo do site instagram que direciona para meu perfil na rede social"></a>
                 </p>
             </footer>
         </main>
