--- a/index.html
+++ b/index.html
@@ -67,13 +67,11 @@
             vivendo pra saber! Desculpa por isso, não dá para resumir o tanto
             que aprendemos e nos desenvolvemos em menos de 1 mes!! Aquecimento,
             Dinámicas, Aula ao Vivo, Feedbacks, Fechamento, .. eeee Projeto!! É
-            demais!!! E hoje, depois de terminar o Primeiro
-            Projeto da Trybe, minhas perguntas mudaram, minha visão mudou, minha
-            experiencia mudou, e eu só tenho a agradecer por isso!
+            demais!!! E hoje, depois de terminar o Primeiro Projeto da Trybe,
+            minhas perguntas mudaram, minha visão mudou, minha experiencia
+            mudou, e eu só tenho a agradecer por isso!
           </p>
         </article>
-      </section>
-      <section class="aside__general">
         <aside class="aside">
           <h4>Uma rápida passagem...</h4>
           <p>
@@ -81,7 +79,7 @@
             alunos? Já pensou na experiencia que essa escola pode proporcionar?
             Ou Você acha que a escola tem que ensinar e ponto final? São muitas
             respostas, e tenho certeza que cada um de nós tem uma resposta pra
-            cada uma dessas perguntas. 
+            cada uma dessas perguntas.
           </p>
         </aside>
       </section>
