Corrigindo Code Climate

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Lessons Lerned - Trybe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -27,8 +27,6 @@
                 <h2>Saulo Kirchmaier Teixeira</h2>
                 <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
             </section>
-
-            
 
             <section class="couteudo-principal">
                 <article id="artigo-aprendizado" class="lado-esquerdo">
@@ -63,7 +61,7 @@
                         <li>Resiliência</li>
                     </ol>
                 </section>
-    
+
                 <section class="lista-conteudo">
                     <h2>A estudar</h2>
                     <ul id="licoes_a_aprender">
