--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <section class="articles">
         <article class="article">
           <a href="https://www.betrybe.com/" target="_blank"><h3>Trybe</h3></a>
+          <h4>Aprendizado até aqui.</h4>
           <p>
             O Grupo, a Equipe, a ESCOLA Trybe é algo diferenciado, algo que so
             vivendo pra saber! Desculpa por isso, não dá para resumir o tanto
