--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <nav id="cabecalho" >
-    <h1 id="title" >Lições aprendidas na trybe</h1>
-    <ul>
+    <header id="title" >Lições aprendidas na trybe</header>
+    <ul id="menu">
         <li>Home</li>
         <li>Login</li>
     </ul>
 </nav>
 <div class="main" >
- <aside>
+ <aside class="lado-esquerdo">
         <div>
               <img id="profile-pic" src="./image.jpeg" alt="alailsonko">
               <h2>Alailson Andrade</h2>
@@ -25,7 +25,7 @@
             </p>
   </aside>
 
-          <section>
+          <section class="lado-direito">
        <table>
         <caption>Lições aprendidas e a aprender</caption>
           <th id="title-table">Lições</th>
