Barra superior com um título Fix3

--- a/index.html
+++ b/index.html
@@ -2,23 +2,16 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <title>Projeto Trybe</title>
 
-  <img >
-    <ul>
-      <h1></h1>
-
-    </ul>
-    </div>
-
-    <ul></ul>
   <link rel="stylesheet" type="text/css"  href="style.css"/>
 
 </head>
 
 <body>
-  <title id="titulo">Projeto Trybe</title>
+  
   <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
-
+  <a id="titulo" href="https://github.com/otacisos" target="_blank">Github</a>
   </head>
   <img id="minha_foto" src="miau.jpg">
 
