requisito 12 bonus inserindo uma tabela

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Projeto</title>
 </head>
 <body>
   <header id="cabecalho">
-    <nav>
-      <h1 id="titulo">Perycles F.</h1>
+    <nav id="titulo">
+      <h1>Perycles F.</h1>
     </nav>
   </header>
   <section>
@@ -18,7 +18,7 @@
   <main id="content">
     <section>
       <div>
-        <h3>Licoes aprendidas:</h3>
+        <h2>Licoes aprendidas:</h2>
         <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
@@ -33,7 +33,7 @@
         </ol>
       </div>
       <div>
-        <h3>Licoes a aprender:</h3>
+        <h2>Licoes a aprender:</h2>
         <ul id="licoes_a_aprender">
           <li>JavaScrit</li>
           <li>FlexBoxCss</li>
@@ -57,6 +57,16 @@
     <aside id="aside">
       <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
     </aside>
+    <table id="tabela">
+      <tr>
+        <td>Alguma coisa aqui dentro!</td>
+        <td>Alguma coisa aqui!</td>
+      </tr>
+      <tr>
+        <td>E outra coisa aqui!</td>
+        <td>Outra coisa aqui!</td>
+      </tr>
+    </table>
   </main>
   <footer id="rodape">
     <p><strong>Development by for Perycles R. Floriano.</strong> </p>
