--- a/index.html
+++ b/index.html
@@ -54,7 +54,20 @@
             <li>SQL</li>
         </ul>
     </section>
-
+    
+    <table>
+        <tr>
+            <td class="up-table table-hdivision table-vdivision">Fundamentos do Desenvolvimento Web</td>
+            <td class="up-table table-hdivision table-vdivision">Desenvolvimento Front-end</td>
+            <td class="up-table table-hdivision table-vdivision">Desenvolvimento                Back-end</td>
+            <td class="up-table table-hdivision">Ciência da Computação</td>
+        </tr>
+        <tr>
+            <td class="table-vdivision"><img src="check.jpg" alt="check mark" width=25px></td>
+            <td class="table-vdivision"><img src="loading.txt" alt="loading gif" width=150px></td>
+            <td class="table-vdivision"><img src="loading.txt" alt="loading gif" width=150px></td>
+            <td><img src="loading.txt" alt="loading gif" width=150px></td>
+        </tr></table>
     <article>
         <h2>Rotina de Estudos</h2>
         <p>A rotina de estudos na <a href="https://www.betrybe.com/" target="_blank">Trybe</a> é baseada na metodologia ativa de ensino, portanto me responsabilizo pelo meu aprendizado.
