Terminei nao aprendidas & + Assets

--- a/index.html
+++ b/index.html
@@ -106,74 +106,74 @@
           <h2>Lições a Aprender</h2>
           <ul id="licoes_a_aprender">
             <li>
-                Inspect
+                JavaScript
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/js.png"
+                  alt="ícone do JavaScript"
                 />
               </li><li>
-                Inspect
+                SQL
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/sql.jpeg"
+                  alt="ícone do sql"
                 />
               </li><li>
-                Inspect
+                React
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/react.png"
+                  alt="ícone do react"
                 />
               </li><li>
-                Inspect
+                Node
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/node.png"
+                  alt="ícone do node"
                 />
               </li><li>
-                Inspect
+                DOM
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/dom.png"
+                  alt="ícone do dom"
                 />
               </li><li>
-                Inspect
+                CSS Responsivo
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/css-resp.png"
+                  alt="ícone do css responsivo"
                 />
               </li><li>
-                Inspect
+                ES6
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/es6.jpeg"
+                  alt="ícone do es6"
                 />
               </li><li>
-                Inspect
+                Jest
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/jest.png"
+                  alt="ícone do jest"
                 />
               </li><li>
-                Inspect
+                Unit Test
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/unit.jpeg"
+                  alt="ícone do unit test"
                 />
               </li><li>
-                Inspect
+                Forms
                 <img
                   class="icon"
-                  src="assets/inspect.png"
-                  alt="ícone do inspect"
+                  src="assets/form.png"
+                  alt="ícone do forms"
                 />
               </li>
           </ul>
