Tentativa de gerar uma tabela

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <nav id="menu">SOBRE MIM ● </nav>
       </header>
       <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
-        <section>
-          <ol id="licoes_aprendidas">
+      <section>
+        <table border="2px">
+            <br><th>LIÇÕES APRENDIDAS
+          <br><ol id="licoes_aprendidas">
               <li>avffb</li>
               <li>dhfud</li>
               <li>frf</li>
@@ -23,8 +25,9 @@
               <li>fvfdv</li>
               <li>efe</li>
               <li>edef</li>
-          </ol>
-          <ul id="licoes_a_aprender">
+          </ol></th>
+          <br><th>LIÇÕES A APRENDER
+          <br><ul id="licoes_a_aprender">
               <li>fhuhfud</li>
               <li>fhuhfud</li>
               <li>fhuhfud</li>
@@ -35,8 +38,9 @@
               <li>fhuhfud</li>
               <li>fhuhfud</li>
               <li>fhuhfud</li>
-          </ul>
-        </section>
+          </ul></th>
+        </table>
+      </section>
         <article>
             <h2 id="aprendizado">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur facilisis congue augue ac tempus. Nunc pulvinar, nisi tempor semper sollicitudin, est enim sodales ex, et mattis nisi odio in erat. Aliquam malesuada ante vel enim porta accumsan. Cras rutrum eleifend nisl, laoreet faucibus diam laoreet at. Cras rutrum placerat elit, eget pretium risus imperdiet ut. Proin egestas ex at ipsum nulla.
