--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <nav id="cabecalho" >
-    <header id="title" >Lições aprendidas na trybe</header>
+    <header id="title" >
+    <h2> Lições aprendidas na trybe</h2>
+    </header>
     <ul id="menu">
         <li>Home</li>
         <li>Login</li>
@@ -20,6 +22,7 @@
               <img id="profile-pic" src="./image.jpeg" alt="alailsonko">
               <h2>Alailson Andrade</h2>
             <a href="https://github.com/alailsonko">github</a>
+            <a href="https://www.google.com">linkedin</a>
             <p>"sit voluptatem accusantium doloremque
                  laudantium, totam rem aperiam, eaque ipsa quae a
             </p>
