--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
+        <li>Shell</li>
+        <li>Bash</li>
         <li>Git</li>
         <li>GitHub</li>
-        <li>Empatia</li>
         <li>HTML</li>
         <li>CSS</li>
         <li>Slack</li>
         <li>Zoom</li>
-        <li>Inspect</li>
         <li>Semantic HTML</li>
     </ol>
     <h2>Lições para aprender</h2>
     <ul id="licoes_a_aprender">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Empatia</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Web Storage</li>
+        <li>CSS Flexbox</li>
+        <li>CSS Responsivo</li>
+        <li>Jest</li>
+        <li>React</li>
+        <li>NodeJS</li>
+        <li>Deployment</li>
+        <li>Python</li>
     </ul>
     <footer id="rodape">
         Project Lessons Learned - SD09
