--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="main" >
  <aside class="lado-esquerdo">
         <div>
-              <img id="profile-pic" src="./image.jpeg" alt="alailsonko">
+              <img id="profile-pic" src="./alailsonko.jpeg" alt="alailsonko">
               <h2>Alailson Andrade</h2>
             <a href="https://github.com/alailsonko">github</a>
             <a href="https://www.google.com">linkedin</a>
