--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
             <header id="cabecalho">
                 <h1 id="titulo">Lições Aprendidas</h1>
             </header>
-            
-            <img id="minha_foto"src="MinhaFoto.jpg" alt="uma foto do meu rosto">
+            <nav id="navegacao">
+                <ul>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Lista</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+            <img id="minha_foto"src="MinhaFoto.jpg"alt="Uma foto minha">
             <h2>Lista de lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
@@ -47,8 +53,13 @@
             <footer id="rodape">
                 <p>
                     Informacoes para contato:<br>
-                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="uma logo do site linkedin"></a>
-                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="768px-Instagram_logo_2016.svg.webp" alt="Uma logo do site instagram que direciona para meu perfil na rede social"></a>
+                    <a href="https://www.linkedin.com/in/khyrki/" target="_blank"><img id="linkedin" src="Linkedin-Symbol.png" alt="A picture of linkedin logo"></a>
+                    <a href="https://www.instagram.com/khyrki/" target="_blank"><img id="instagram"src="768px-Instagram_logo_2016.svg.webp" alt="A picture of Instagram logo"></a>
+                    <p>Esta pagina oferece suporte para pessoas com deficiencia visual<br>
+                        <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+                          <img src="https://achecker.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102" />
+                        </a>
+                      </p>
                 </p>
             </footer>
         </main>
