--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   </head>
   <body>
     <header id="cabecalho">
-      <div class="logo">
-        <img src="assets/logo.png" alt="Logo NV, Inc" />
-      </div>
       <h1 id="titulo">Lições Aprendidas na Trybe!</h1>
       <nav>
         <ul>
@@ -73,6 +70,8 @@
             mudou, e eu só tenho a agradecer por isso!
           </p>
         </article>
+      </section>
+      <section>
         <aside class="aside">
           <h4>Uma rápida passagem...</h4>
           <p>
