Adjusting CSS and HTML

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <td>09</td>
                 </tr>
             </table>
-            <section id="licoes_aprendidas">
+            <section id ="box2">
                 <h2>Lições Aprendidas:</h2>
-                <ol>
+                <ol id="licoes_aprendidas">
                     <li>Fundamentos do Desenvolvimento Web</li>
                     <li>Introdução - Unix & Shell</li>
                     <li>Unix & Bash</li>
@@ -50,9 +50,9 @@
                     <li>HTML Semântico</li>
                 </ol>
             </section>
-            <section id="licoes_a_aprender">
+            <section id="box3">
                 <h2>Lições que desejo aprender ainda:</h2>
-                <ul>
+                <ul id="licoes_a_aprender">
                     <li>Javascript</li>
                     <li>React</li>
                     <li>Metodologias Ágeis</li>
