--- a/index.html
+++ b/index.html
@@ -71,18 +71,16 @@
           </p>
         </article>
       </section>
-      <section>
-        <aside class="aside">
-          <h4>Uma rápida passagem...</h4>
-          <p>
-            Você já parou pra pensar o que uma escola pode oferecer para seus
-            alunos? Já pensou na experiencia que essa escola pode proporcionar?
-            Ou Você acha que a escola tem que ensinar e ponto final? São muitas
-            respostas, e tenho certeza que cada um de nós tem uma resposta pra
-            cada uma dessas perguntas.
-          </p>
-        </aside>
-      </section>
+      <aside class="aside">
+        <h4>Uma rápida passagem...</h4>
+        <p>
+          Você já parou pra pensar o que uma escola pode oferecer para seus
+          alunos? Já pensou na experiencia que essa escola pode proporcionar? Ou
+          Você acha que a escola tem que ensinar e ponto final? São muitas
+          respostas, e tenho certeza que cada um de nós tem uma resposta pra
+          cada uma dessas perguntas.
+        </p>
+      </aside>
       <section>
         <h3>Genios Inventores</h3>
         <table>
