altera o tamanho da foto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="">Contato</a></li>
                 </ul>
             </nav>
-            <img id="minha_foto"src="MinhaFoto.jpg"alt="Uma foto minha">
+            <img id="minha_foto"src="Minha_Foto.jpg"alt="Uma foto minha">
             <h2>Lista de lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
