(8) requisito - artigo sobre aprendizado

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <li>Deployment</li>
         <li>Python</li>
     </ul>
+    <article>
+        <header>
+            <h2>O meu aprendizado na Trybe</h2>
+        </header>
+        <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo. 
+            São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis. 
+            Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece 
+            através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
+    </article>
     <footer id="rodape">
         Project Lessons Learned - SD09
         <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a>
