--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <nav id="cabecalho" >
-    <header id="title" >
-    <h2> Lições aprendidas na trybe</h2>
+    <header >
+    <h1 id="titulo"> Lições aprendidas na trybe</h1>
     </header>
     <ul id="menu">
         <li>Home</li>
@@ -19,10 +19,10 @@
 <div class="main" >
  <aside class="lado-esquerdo">
         <div>
-              <img id="profile-pic" src="./alailsonko.jpeg" alt="alailsonko">
+              <img id="minha_foto" src="./alailsonko.jpeg" alt="alailsonko">
               <h2>Alailson Andrade</h2>
-            <a href="https://github.com/alailsonko">github</a>
-            <a href="https://www.google.com">linkedin</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/alailsonko">github</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.google.com">linkedin</a>
             <p>"sit voluptatem accusantium doloremque
                  laudantium, totam rem aperiam, eaque ipsa quae a
             </p>
