--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Projeto Trybe</title>
-
-  <link rel="stylesheet" type="text/css"  href="style.css"/>
-
+  <title id="titulo"> Projeto Trybe</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-
 <body>
-  
+  <h id=""></h>
+
   <h1 id="cabecalho">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
-  <a id="titulo" href="https://github.com/otacisos" target="_blank">Github</a>
+  <a href="https://github.com/otacisos" target="_blank">Github</a>
   </head>
   <img id="minha_foto" src="miau.jpg">
 
