--- a/index.html
+++ b/index.html
@@ -179,5 +179,8 @@
           </ul>
       </section>
     </main>
+    <footer id="rodape">
+        <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blanc">Kevin Fraga</a>. </p>
+    </footer>
   </body>
 </html>
