requisito 13 bonus stilizando com box model

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <header id="cabecalho">
     <nav id="titulo">
-      <h1>Perycles F.</h1>
+      <title><h1>Perycles F.</h1></title>
     </nav>
   </header>
-  <section>
+  <section class="imagem">
     <img id="minha_foto" src="./img1.jpg" alt="">
   </section>
   <main id="content">
