--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
           </p>
         </article>
       </section>
-      <aside class="aside">
-        <h4>Uma rápida passagem...</h4>
-        <p>
-          Você já parou pra pensar o que uma escola pode oferecer para seus
-          alunos? Já pensou na experiencia que essa escola pode proporcionar? Ou
-          Você acha que a escola tem que ensinar e ponto final? São muitas
-          respostas, e tenho certeza que cada um de nós tem uma resposta pra
-          cada uma dessas perguntas.
-        </p>
-      </aside>
+      <section>
+        <aside class="aside">
+          <h4>Uma rápida passagem...</h4>
+          <p>
+            A viagem de aprendizagem é interminável, ninguém lhe ensina
+            realmente como aprender. O foco está sobretudo no que aprender. Mas
+            Aprender a Aprender é crucial se você quiser ir longe.
+          </p>
+        </aside>
+      </section>
       <section>
         <h3>Genios Inventores</h3>
         <table>
