--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <h1 id="titulo">Lições Aprendidas na <a href="https://app.betrybe.com/course/fundamentals/unix/unix-part-1" target="_blank"><img id="trybe_logo" src="trybe.png" alt="imagem da logotipo da Trybe"></a></h1>
         <nav id="menu">SOBRE MIM ● </nav>
       </header>
-      <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
-      <section>
+      <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">   
         <table border="2px">
             <br><th>LIÇÕES APRENDIDAS
           <br><ol id="licoes_aprendidas">
@@ -40,13 +39,12 @@
               <li>fhuhfud</li>
           </ul></th>
         </table>
-      </section>
-        <article>
+        <article class="lado-esquerdo">
             <h2 id="aprendizado">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur facilisis congue augue ac tempus. Nunc pulvinar, nisi tempor semper sollicitudin, est enim sodales ex, et mattis nisi odio in erat. Aliquam malesuada ante vel enim porta accumsan. Cras rutrum eleifend nisl, laoreet faucibus diam laoreet at. Cras rutrum placerat elit, eget pretium risus imperdiet ut. Proin egestas ex at ipsum nulla.
             </h2>
         </article>
-            <section>
+            <section class="lado-direito">
                 <aside id="passagem">orem ipsum dolor sit amet, consectetur adipiscing elit. In fringilla, sapien at commodo suscipit, quam odio auctor lectus, eget lobortis arcu nulla et ex. Fusce ut metus sed velit tempor egestas. Phasellus cursus efficitur purus id accumsan gravida.</aside>
             </section>
                 <section>
